--- a/index.html
+++ b/index.html
@@ -12,7 +12,45 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <u1>
+          <li>The head element contains information about the webpage</li>
+          <li>The body element represents the visible content shown to the user</li>
+          <li>Elements that are nested inside other elements are called child elements</li>
+          <li>The element that holds all the children is known as the parent element</li>
+          <li>An element refers to the entire element from opening tag to closing tag</li>
+          <li>A tag refers only to what appears inside the angle brackets</li>
+          <li>Each hi element represents the level of heading a given text block represents</li>
+          <li>The ul, ol, and li elements represent unordered lists, ordered lists, and list items</li>
+          <li>The p element represents a paragraph or block of tex</li>
+          <li>The img  element contains information about images that are displayed on the webpage</li>
+          <li>The br element creates a line of empty space, or a line break, between two blocks of content</li>
+        </u1>
+      </section>
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <u1>
+          <li>Enter your CSS notes here</li>
+        </u1>
+      </section>
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <u1>
+          <li>git status: checks what branch we are currently on</li>
+          <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          <li>git add -A adds code to the current working branch</li>
+          <li>git commit -m commit-message: creates a commit that captures a snapshot of the currently staged changes</li>
+          <li>git pull origin main: receives a branch's modifications into the local environment and we use it to check if our local branch is in sync with the base branch in GitHub</li>
+          <li>git push origin feature/name: pushes our changes to the remote branch</li>
+        </u1>
+      </section>
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <u1>
+          <li>Enter your JavaScript notes here</li>
+        </u1>
+       </section>
     </main>
 
     <footer>
