--- a/index.html
+++ b/index.html
@@ -53,7 +53,12 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
         <u1>
-          <li>Enter your JavaScript notes here</li>
+          <li>A variable is a named container that allows us to store data in our code.</li>
+          <li>Control flow is the order in which a computer executes code in a script.</li>
+          <li>A for loop contains the starting point for the loop, the condition and the statement that allows the array to iterate over each time</li>
+          <li>A function is differetnt from  for loop because we must  call a function  by name in order to execute it</li>
+          <li>To declare a function, we use the function keyword and then give a name followed by parenthesis</li>
+          <li>To call a function, we use the name in our js file where we want the code to execute</li>
         </u1>
        </section>
     </main>
